--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-05-movies",
+  "name": "goit-react-hw-05-movies-lazy",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://RamonSanGabriel.github.io/goit-react-hw-05-movies/",
+  "homepage": "https://RamonSanGabriel.github.io/goit-react-hw-05-movies-lazy/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
